# Access-The-Obelisk

./: .gitignore  AGENTS.md  AccessStateManager.cs  AccessTheObelisk.csproj  AlertHandler.cs  CardCraftHandler.cs  CardPlayerHandler.cs  CardScreenHandler.cs  CardSpeech.cs  ChallengeSelectionHandler.cs  CharPopupHandler.cs  CharacterDeckHandler.cs  CharacterInfoHandler.cs  ChatHandler.cs  CinematicHandler.cs  CombatHandler.cs  CombatModalHandler.cs  ConflictHandler.cs  CorruptionHandler.cs  CreditsHandler.cs  CurrencyHotkeyHandler.cs  DebugLogger.cs  EnemyPlayedCardPatch.cs  EventHandler.cs  FinishRunHandler.cs  GameEventBuffer.cs  GameText.cs  GamepadInput.cs  GamepadSuppressionPatch.cs  GiveHandler.cs  HeroLevelHandler.cs  HeroSelectionHandler.cs  InputActivationGuard.cs  LobbyHandler.cs  Loc.cs  LootHandler.cs  Main.cs  MainMenuHandler.cs  MapHandler.cs  ModInput.cs  (+25 more)
.github/workflows/: release.yml
Localization/: en.txt  ru.txt
docs/: game-api.md  release-guide.md
docs/En/: changelog.txt  readme.txt
docs/Ru/: changelog.txt  readme.txt
installer/AccessTheObelisk.Installer/: AccessTheObelisk.Installer.csproj  ChangelogForm.cs  GameLocator.cs  GitHubReleaseClient.cs  InstallerConstants.cs  MainForm.cs  ModInstaller.cs  Models.cs  Program.cs  VersionSelectionForm.cs
installer/AccessTheObelisk.Installer.Rust/: Cargo.toml
installer/AccessTheObelisk.Installer.Rust/src/: main.rs
scripts/: Build-Installer.ps1  Build-Mod.ps1  Deploy-Mod.ps1  Package-Release.ps1
